<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category_normal"
        android:title="General" />

    <EditTextPreference
        android:defaultValue="Dean Kamen"
        android:key="scout_name"
        android:title="@string/scout_name" />

    <org.usfirst.frc.team25.scouting.ui.views.NumberPickerPreference
        android:defaultValue="10"
        android:key="shift_dur"
        android:layout="@layout/preference_normal"
        android:title="@string/shift_dur" />

    <ListPreference
        android:defaultValue="Red 1"
        android:entries="@array/position_options"
        android:entryValues="@array/position_options"
        android:key="pos"
        android:summary="%s"
        android:title="@string/scout_position" />

    <org.usfirst.frc.team25.scouting.ui.views.NumberPickerPreference
        android:defaultValue="1"
        android:key="match_num"
        android:layout="@layout/preference_normal"
        android:title="@string/match_number" />

    <ListPreference
        android:defaultValue="Q"
        android:entries="@array/match_types"
        android:entryValues="@array/match_types_values"
        android:key="match_type"
        android:summary="%s"
        android:title="@string/match_type" />

    <ListPreference
        android:defaultValue="Brunswick Eruption"
        android:entries="@array/event_options"
        android:entryValues="@array/event_options_values"
        android:key="event"
        android:summary="%s"
        android:title="@string/event" />

    <Preference
        android:defaultValue="2018"
        android:enabled="true"
        android:key="year"
        android:summary="2018"
        android:title="@string/year"

        />

    <PreferenceCategory
        android:layout="@layout/preference_category_normal"
        android:title="FIRST Destination: Deep Space" />

    <ListPreference
        android:defaultValue="Red Alliance"
        android:entries="@array/alliance_type"
        android:entryValues="@array/alliance_type"
        android:key="leftStation"
        android:summary="%s"
        android:title="Left alliance color" />

    <org.usfirst.frc.team25.scouting.ui.views.DecimalPickerPreference
        android:defaultValue="4"
        android:key="timer_manual_inc"
        android:layout="@layout/preference_normal"
        android:title="Timer manual increment amount" />


    <PreferenceCategory
        android:layout="@layout/preference_category_normal"
        android:title="Data Transfer" />

    <CheckBoxPreference
        android:key="use_team_list"
        android:defaultValue="true"
        android:summary="Verify scout input with predefined team lists for events"
        android:title="Use team lists" />


    <Preference
        android:defaultValue="false"
        android:key="download_schedule"
        android:title="Download match schedule" />

    <Preference
        android:defaultValue="da39a3ee5e6b4b0d3255bfef95601890afd80709"
        android:key="change_pass"
        android:shouldDisableView="true"
        android:title="@string/change_pass" />

    <Preference
        android:key="delete_data"
        android:title="@string/delete_data"

        />

    <PreferenceCategory
        android:layout="@layout/preference_category_normal"
        android:title="About" />

    <Preference
        android:key="game"
        android:title="Game" />

    <Preference
        android:key="version"
        android:title="Version" />


</PreferenceScreen>