<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.preferences.SetPasswordActivity">

    <TextView
        android:id="@+id/set_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/set_pass_prompt"
        android:textColor="#000000"
        android:textSize="24sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_pass_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_pass_label"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/new_pass_hint"
        android:inputType="textPassword"

        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confirm_new_pass_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_pass_box"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_new_pass_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingBottom="1dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingTop="5dip">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:elevation="8dp"
            android:text="@string/cancel_button"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:theme="@style/Widget.AppCompat.Button.Colored.blue" />

        <Button
            android:id="@+id/set_pass_button"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:elevation="8dp"
            android:text="@string/set_button"
            android:textColor="#ffffff"
            android:theme="@style/Widget.AppCompat.Button.Colored.blue" />
    </LinearLayout>

</RelativeLayout>
