<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.preferences.EnterPasswordActivity">

    <TextView
        android:id="@+id/enter_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/delete_files_prompt"
        android:textColor="#000000"
        android:textSize="24sp" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/delete_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_password_label"
        android:layout_marginTop="50dp"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        app:errorEnabled="true"
        app:met_floatingLabel="normal" />


    <TextView
        android:id="@+id/delete_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete_password_box"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/delete_files_warn"
        android:textColor="#000000"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete_warning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingLeft="4dip"
        android:paddingTop="5dip"
        android:paddingRight="4dip"
        android:paddingBottom="1dip">

        <Button
            android:id="@+id/cancel_delete_button"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:elevation="8dp"
            android:text="@string/cancel_button"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:theme="@style/Widget.AppCompat.Button.Colored.blue" />

        <Button
            android:id="@+id/delete_file_button"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:elevation="6dp"
            android:text="@string/delete_button"
            android:textColor="#ffffff"
            android:theme="@style/Widget.AppCompat.Button.Colored.blue" />
    </LinearLayout>

</RelativeLayout>
