<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.usfirst.frc.team25.scouting.ui.MenuActivity">


    <RelativeLayout
        android:id="@+id/add_entry"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/add_entry_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_icon_white"
            android:scaleType="centerInside"
            android:src="@drawable/circle_icon"
            />


        <TextView
            android:id="@+id/add_entry_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_entry_button"
            android:layout_centerHorizontal="true"
            android:enabled="true"
            android:text="@string/add_match_menu_label"
            android:textAlignment="center"
            android:textColor="@color/bright_foreground_material_light"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/export_data"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/export_data_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/share_icon" />

        <TextView
            android:id="@+id/export_data_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/export_data_button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:enabled="true"
            android:text="@string/export_data_menu_label"

            android:textAlignment="center"
            android:textColor="@color/bright_foreground_material_light"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rules"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_entry"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/rules_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/book_icon" />

        <TextView
            android:id="@+id/rules_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules_button"
            android:layout_centerHorizontal="true"
            android:enabled="true"
            android:text="@string/rules_menu_label"
            android:textAlignment="center"
            android:textColor="@color/bright_foreground_material_light"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/export_data"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp">


        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/settings_icon" />

        <TextView
            android:id="@+id/settings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_button"
            android:layout_centerHorizontal="true"
            android:enabled="true"
            android:text="@string/settings_menu_label"
            android:textAlignment="center"
            android:textColor="@color/bright_foreground_material_light"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_above="@id/current_info_label"
        android:layout_below="@id/settings"
        android:layout_centerVertical="true">


        <ImageView
            android:id="@+id/game_logo_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/deep_space_logo"
            android:textAlignment="center" />
    </RelativeLayout>

    <TextView
        android:id="@+id/current_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/default_status"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/bright_foreground_material_light"
        android:textSize="20sp" />
</RelativeLayout>
