<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pre_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"


    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.dataentry.PreMatchFragment">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp">

            <!-- Dummy item to prevent EditText from receiving focus -->
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <Spinner
                android:id="@+id/coursesspinner"
                android:layout_height="50dp"
                android:layout_width="160dp"
                android:layout_marginTop="425dp"
                android:layout_marginStart="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="425dp"
                android:padding="8sp"
                android:text="Type of Motors"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/type_swerve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp"
                android:layout_marginTop="378dp"
                android:padding="10dp"
                android:text="Swerve"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/type_tank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginTop="378dp"
                android:padding="10dp"
                android:text="Tank"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="375dp"
                android:padding="8sp"
                android:text="Tank/Swerve"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/speed_meter_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="73dp"
                android:layout_marginTop="500dp"
                android:padding="10dp"
                android:text="m/s"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/speed_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="152dp"
                android:layout_marginTop="500dp"
                android:padding="10dp"
                android:text="N/A"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="500dp"
                android:padding="8sp"
                android:text="Speed:"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="350dp"
                android:padding="8sp"
                android:text="Drive Base"
                android:textSize="18sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/scout_name_field_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:hint="@string/scout_name_3"
                android:paddingStart="@dimen/inner_padding_left"
                android:paddingTop="@dimen/default_padding_top"
                android:paddingEnd="@dimen/inner_padding_right"
                android:paddingBottom="@dimen/default_padding_bottom"
                android:singleLine="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/scout_name_field_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/scout_name_2"
                android:paddingStart="@dimen/inner_padding_left"
                android:paddingTop="@dimen/default_padding_top"
                android:paddingEnd="@dimen/inner_padding_right"
                android:paddingBottom="@dimen/default_padding_bottom"
                android:singleLine="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/scout_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scout_name"
                android:paddingStart="@dimen/inner_padding_left"
                android:paddingTop="@dimen/default_padding_top"
                android:paddingEnd="@dimen/inner_padding_right"
                android:paddingBottom="@dimen/default_padding_bottom"
                android:singleLine="true"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/match_num_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_spin"
                android:layout_marginTop="200dp"
                android:hint="@string/match_number"
                android:inputType="number"
                android:paddingStart="@dimen/inner_padding_left"
                android:paddingTop="@dimen/default_padding_top"
                android:paddingEnd="@dimen/inner_padding_right"
                android:paddingBottom="@dimen/default_padding_bottom"
                android:singleLine="true"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/event_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/scout_name_field"
                android:hint="@string/event"
                android:paddingStart="@dimen/inner_padding_left"
                android:paddingTop="@dimen/default_padding_top"
                android:paddingEnd="@dimen/inner_padding_right"
                android:paddingBottom="@dimen/default_padding_bottom"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>
